@@ -38,6 +38,9 @@
 <p>2015-04-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/display.c (MagickXROIImage): Fix Coverity 10179 &quot;Missing
+break in switch&quot;.
+(MagickXCropImage): Fix Coverity 10211 &quot;Missing break in switch&quot;.</li>
 <li>magick/utility.c (Base64Decode): Fix Coverity 10203 &quot;Missing
 break in switch&quot;.
 (Tokenizer): Quench Coverity 10182 &quot;Missing break in switch&quot;.  Not
