@@ -1,5 +1,9 @@
 2015-04-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/display.c (MagickXROIImage): Fix Coverity 10179 "Missing
+	break in switch".
+	(MagickXCropImage): Fix Coverity 10211 "Missing break in switch".
+
 	* magick/utility.c (Base64Decode): Fix Coverity 10203 "Missing
 	break in switch".
 	(Tokenizer): Quench Coverity 10182 "Missing break in switch".  Not
